<resources>
    <string name="app_name">JustPoteito</string>
    <string name="title_main">Just Poteito</string>
    <string name="please_login">Please login</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="forgot_password">forgot password?</string>
    <string name="signup_button">SIGNUP</string>
    <string name="login_button">Login</string>
    <string name="title_register">Register</string>
    <string name="please_signup">Please Sign Up</string>
    <string name="first_name">first name</string>
    <string name="last_names">last names</string>
    <string name="title_resetPassword">Change Password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="reset_button">Change</string>
    <string name="title_forgotPassword">Forgot Password</string>
    <string name="type_your_email">type your username</string>
    <string name="send">Send</string>
    <string name="hi">Hi</string>
    <string name="name">Name</string>
    <string name="search">Search</string>
    <string name="explorer">Explore Recipes</string>
    <string name="title_explore_by_type_of_cuisine">Explore by type of cuisine</string>
    <string name="title_explore_by_dish">Explore by dish</string>
    <string name="title_explore_by_cook">Explore by cook</string>
    <string name="exp_ingredients">Explore by ingredients</string>
    <string name="title_list">Ingredients</string>
    <string name="title_type_of_cuisine">Cuisine</string>
    <string name="dishes">dishes</string>
    <string name="title_dish">Dish name</string>
    <string name="dish_preparation_time">Time</string>
    <string name="minutes">min</string>
    <string name="ingredients">Ingredients</string>
    <string name="type_comment">Type a comment</string>
    <string name="comments">Comments 0</string>
    <string name="error_communication">Error communication</string>
    <string name="empty_form_field">This field cannot be empty</string>
    <string name="short_form_filed">This filed must have at least</string>
    <string name="character">characters</string>
    <string name="email_required_form_field">This field should be a valid username</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="user_already_exists">This user already exists</string>
    <string name="user_doesnt_exist">That user mail is not linked to any account</string>
    <string name="request_error">Something went wrong</string>
    <string name="user_created">User created</string>
    <string name="incorrect_password">The password is incorrect</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="remember_me">Remember me?</string>
    <string name="user_not_enabled">This account is disabled</string>

    <!-- Strings related to Profile -->
    <string name="user">Karlos</string>
    <string name="profile">My Profile</string>
    <string name="prof_name">Carlos</string>
    <string name="surname">Arguiñano</string>
    <string name="prof_email">KarlosArguiñano@gmail.com</string>
    <string name="password_changed">The password was changed</string>
    <string name="user_not_updated">There was a problem with your user account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>