<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".IngredientsActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="267dp"
        android:layout_height="406dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/verduras" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="99dp"
        android:layout_height="97dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="34dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:adjustViewBounds="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="192dp"
        android:layout_height="141dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="144dp"
        android:fontFamily="cursive"
        android:text="@string/exp_ingredients"
        android:textColor="@color/cream"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="108dp"
        android:fontFamily="casual"
        android:text="@string/hi"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="116dp"
        android:fontFamily="casual"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="130dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:background="@color/cream"
        android:fontFamily="casual"
        android:text="@string/title_list"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="409dp"
        android:layout_height="41dp"
        android:layout_marginTop="13dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="226dp"
        android:layout_height="340dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="15dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/ingredients"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        tools:ignore="RedundantDescriptionCheck">

    </ScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="130dp"
        android:layout_height="307dp"
        android:layout_marginStart="16dp"
        android:background="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />



</androidx.constraintlayout.widget.ConstraintLayout>