<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".ExplorerActivity">


    <Button
        android:id="@+id/button5"
        android:layout_width="264dp"
        android:layout_height="63dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/white"
        android:fontFamily="casual"
        android:text="@string/exp_ingredients"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="264dp"
        android:layout_height="63dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/white"
        android:fontFamily="casual"
        android:text="@string/title_explore_by_dish"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="264dp"
        android:layout_height="63dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="91dp"
        android:backgroundTint="@color/white"
        android:fontFamily="casual"
        android:text="@string/title_explore_by_cook"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="172dp"
        android:layout_height="122dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="176dp"
        android:fontFamily="cursive"
        android:text="@string/explorer"
        android:textColor="@color/cream"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:adjustViewBounds="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="108dp"
        android:fontFamily="casual"
        android:text="@string/hi"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="116dp"
        android:fontFamily="casual"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="99dp"
        android:layout_height="97dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="34dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <Button
        android:id="@+id/button3"
        android:layout_width="264dp"
        android:layout_height="63dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/white"
        android:fontFamily="casual"
        android:text="@string/title_explore_by_type_of_cuisine"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="267dp"
        android:layout_height="406dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/verduras" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="4dp"
        android:layout_marginTop="11dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="#FFFAFA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="38dp"
        android:layout_height="53dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="15dp"
        android:translationZ="2dp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/kisspng_paella_recipe_rice_quality_paella_5b22090ef12f67_2106401015289571989879" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="47dp"
        android:layout_height="58dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:translationZ="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:srcCompat="@drawable/pngitem_6184970" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="44dp"
        android:layout_height="54dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="15dp"
        android:translationZ="2dp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/_a1c7e70ca3fe7_9399725215118168168284" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="62dp"
        android:layout_height="66dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="88dp"
        android:translationZ="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/pngwing_com" />


</androidx.constraintlayout.widget.ConstraintLayout>