<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".ExplorerActivity">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="130dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:background="@color/cream"
        android:fontFamily="casual"
        android:text="@string/title_list"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="409dp"
        android:layout_height="41dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ingredient_table"
        android:layout_width="226dp"
        android:layout_height="295dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/ingredients"
        android:fontFamily="casual"
        android:text=""
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        tools:ignore="RedundantDescriptionCheck">

    </TextView>

    <ListView
        android:id="@+id/ingredient_list"
        android:layout_width="130dp"
        android:layout_height="307dp"
        android:layout_marginStart="16dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ingredient_table"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.033" />

    <Button
        android:id="@+id/expore_by_ingredient_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/cream"
        android:text="@string/search"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/ingredient_table"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.742"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        app:layout_constraintVertical_bias="0.0" />
    <TextView
        android:id="@+id/ingredientIdListTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text=""
        android:visibility="gone"
        android:focusable="false"
        android:focusableInTouchMode="false"
        tools:ignore="TextContrastCheck"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001"/>

</androidx.constraintlayout.widget.ConstraintLayout>